--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <div class="container">
-
+        <div class="canvas">
+            
+        </div>
     </div>
 </body>
 </html>
