--- a/index.html
+++ b/index.html
@@ -9,10 +9,17 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="top">
+        <h1>Tic Tac Toe</h1>
+    </div>
     <div class="container">
         <div class="canvas">
             
         </div>
+    </div>
+    <div class="bottom button-set">
+        <button class="button-1">Computer</button>
+        <button class="button-2">Two Player</button>
     </div>
 </body>
 </html>
