Add event listener to computer button which removes all buttons if clicked

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </div>
     </div>
     <div class="bottom button-set">
-        <button class="button-1">Computer</button>
-        <button class="button-2">Two Player</button>
+        <button class="button-1 buttons">Computer</button>
+        <button class="button-2 buttons">Two Player</button>
     </div>
 </body>
 </html>
