Redo draw styling

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
     </div>
     <div class="bottom">
-        
+        <p class="sig">Made by Vadim Kostrov - The Odin Project</p>
     </div>
 </body>
 </html>
